added: -dynamic content "I'm a..."
fixed:
-consistent color: Github & Linkedin same es "Hire me"

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
 
@@ -25,12 +28,14 @@
         <img src="images/home-img.jpg" alt="">
     </div>
     <div class="home-content">
-        <h1>Hello, It's <span>Timo</span> </h1>
+        <h1>Hello, It's <span>Timo</span></h1>
         <h3 class="typing-text">I'm a <span></span></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod.</p>
+        <p>Ich habe keine besondere Begabung, sondern bin nur leidenschaftlich neugierig. - Albert Einstein</p>
         <div class="social-icons">
-            <span class="icon"><ion-icon name="logo-github"></ion-icon></span>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
+        <a href="#" class="btn">Hire me</a>
     </div>
 </section>
 
