--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 <body>
 <header>
-    <a href="#" class="logo">Logo</a>
+    <a href="#" class="logo">Timo Schmid</a>
+
     <nav>
         <a href="#" class="active">Home</a>
-        <a href="#">Service</a>
+        <a href="#">Download</a>
         <a href="#">Skills</a>
         <a href="#">Education</a>
         <a href="#">Experience</a>
