Button: "Hire me" opens automaticly outlook to send an Email to me

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
             <a href="#"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
-        <a href="#" class="btn">Hire me</a>
+        <a href="mailto:meineEmail@gmail.com?subject=Job%20Anfrage&body=Hallo%20Timo,%0D%0A%0D%0AIch%20möchte%20gerne%20mit%20dir%20arbeiten!"
+           class="btn">
+            Hire me
+        </a>
+
     </div>
 </section>
 
