--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <a href="#" class="logo">Timo Schmid</a>
 
     <nav>
-        <a href="#" class="active">Home</a>
-        <a href="#">Download</a>
-        <a href="#">Skills</a>
-        <a href="#">Education</a>
-        <a href="#">Experience</a>
-        <a href="#">Contact</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="files/CV_Timo_Schmid.pdf">Download</a>
+        <a href="skills.html">Skills</a>
+        <a href="education.html">Education</a>
+        <a href="experience.html">Experience</a>
+        <a href="contact.html">Contact</a>
     </nav>
 </header>
 
