--- a/contact.html
+++ b/contact.html
@@ -3,26 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
     <a href="#" class="logo">Timo Schmid</a>
 
     <nav>
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html">Home</a>
         <a href="files/CV_Timo_Schmid.pdf">Download</a>
         <a href="skills.html">Skills</a>
         <a href="education.html">Education</a>
         <a href="experience.html">Experience</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
     </nav>
 </header>
 
 <section class="contact">
-    <div class="backgound-img">
-        <img src="images/background.png" alt="">
-    </div>
+    <form action="">
+        <h3>Contact Me</h3>
+
+        <div class="inputBox">
+            <input type="text" name="name" id="name" required>
+            <label for="name">Your Name</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="email" name="email" id="email" required>
+            <label for="email">Your Email</label>
+        </div>
+
+        <div class="inputBox">
+            <textarea name="message" id="message" rows="5" required></textarea>
+            <label for="message">Your Message</label>
+        </div>
+
+        <button type="submit" class="btn">Send</button>
+    </form>
 </section>
+
 
 </body>
 </html>
