fixed: contact- style

--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,7 @@
         </div>
 
         <div class="inputBox">
-            <textarea name="message" id="message" rows="5" required></textarea>
-            <label for="message">Your Message</label>
+            <textarea name="message" id="message" rows="5" placeholder="Your Massage" required></textarea>
         </div>
 
         <button type="submit" class="btn">Send</button>
